--- a/webapitest/wwwroot/index.html
+++ b/webapitest/wwwroot/index.html
@@ -5,6 +5,13 @@
         <meta charset="UTF-8">
     </head>
     <body>
+        <script type="application/javascript">
+            console.log("I am loaded in the browser");
+            fetch("api/values", {
+                method: "get"
+            });
+
+        </script>
         <main>
             <p>Hello World</p>
         </main>
