add emoji to verify its encoded & accounted for properly

--- a/webapitest/wwwroot/index.html
+++ b/webapitest/wwwroot/index.html
@@ -17,7 +17,7 @@
             }
         </script>
         <main>
-            <p>Hello World</p>
+            <p>Hello World 😀 😁 </p>
         </main>
     </body>
 </html>
